Document mTLS activation process for HTTP2
Added detailed instructions for activating mTLS in HTTP2 scenarios, including certificate generation, keystore management, and TLS properties configuration.